[gd_scene format=3 uid="uid://cu5u6hgmgmtox"]

[ext_resource type="Script" uid="uid://dvp6qch17d6nw" path="res://Scenes/Player/Player.gd" id="1_ft8w5"]
[ext_resource type="Texture2D" uid="uid://85lnsnlyw7he" path="res://Assets/Sprites/sage_anim.png" id="2_h54ih"]
[ext_resource type="PackedScene" uid="uid://cjhtbf713axrs" path="res://Scenes/PlayerCam/PlayerCam.tscn" id="3_h54ih"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmcll"]
size = Vector2(36, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h54ih"]
size = Vector2(34, 56)

[sub_resource type="Animation" id="Animation_ft8w5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h54ih"]
resource_name = "hurt"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ude3g"]
resource_name = "move"
length = 0.5885
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14285715, 0.2857143, 0.42857143),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ude3g"]
_data = {
&"RESET": SubResource("Animation_ft8w5"),
&"hurt": SubResource("Animation_h54ih"),
&"move": SubResource("Animation_ude3g")
}

[node name="Player" type="CharacterBody2D" unique_id=1107574173]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ft8w5")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=558049028]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_h54ih")
hframes = 4
region_enabled = true
region_rect = Rect2(4, 4, 94, 37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=932768792]
visible = false
shape = SubResource("RectangleShape2D_jmcll")

[node name="HitBox" type="Area2D" parent="." unique_id=586219992]
collision_mask = 12

[node name="HitBoxBody" type="CollisionShape2D" parent="HitBox" unique_id=1421058304]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_h54ih")

[node name="ShootTimer" type="Timer" parent="." unique_id=747885713]
autostart = true

[node name="HurtTimer" type="Timer" parent="." unique_id=1221184722]
wait_time = 0.6

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1308460356]
libraries/ = SubResource("AnimationLibrary_ude3g")
autoplay = &"move"

[node name="SFX" type="AudioStreamPlayer2D" parent="." unique_id=2025218104]

[node name="PlayerCam" parent="." unique_id=1659336981 instance=ExtResource("3_h54ih")]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
